--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,11 @@ charset-normalizer==2.0.9
 click==8.0.3
 contextlib2==21.6.0
 contextvars==2.4
+cycler==0.11.0
 cymem==1.31.2
 cytoolz==0.8.2
 dataclasses==0.8
+decorator==4.4.2
 dill==0.2.9
 en-core-web-sm==1.2.0
 fastapi==0.70.1
@@ -23,13 +25,16 @@ immutables==0.16
 importlib-metadata==4.8.2
 Jinja2==3.0.3
 joblib==1.1.0
+kiwisolver==1.3.1
 langcodes==3.3.0
 lxml==4.7.1
 MarkupSafe==2.0.1
+matplotlib==3.3.4
 mkl-fft==1.3.0
 mkl-random==1.1.1
 mkl-service==2.3.0
 murmurhash==0.26.4
+networkx==2.5.1
 nltk==3.4.5
 numpy==1.19.5
 olefile==0.46
@@ -41,16 +46,19 @@ plac==0.9.6
 preshed==1.0.1
 pydantic==1.8.2
 pyparsing==3.0.6
+python-dateutil==2.8.2
 python-dotenv==0.19.2
 PyYAML==6.0
 regex==2017.11.9
 requests==2.26.0
 sacremoses==0.0.46
+scipy==1.5.4
 sentencepiece==0.1.96
 six==1.16.0
 smart-open==5.2.1
 sniffio==1.2.0
 spacy==1.9.0
+spicy==0.16.0
 srsly==1.0.5
 starlette==0.16.0
 termcolor==1.1.0
